--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,10 @@
 html {
   background: url('../img/home-background.jpg') no-repeat center center fixed;
   background-size: cover;
-  margin: 0 7.5%;
+  margin: 20px 7.5% 0px 7.5%;
+  font-family: 'Dosis', sans-serif;
+  font-weight: bold;
+  min-height: 2000px;
 }
 /*Adds an rgba background with opacity to every div element on the page
 =============================================*/
@@ -12,35 +15,43 @@ html {
   margin: 30px 0px;
   background-color: rgba(200, 200, 200, 0.70);
 }
-/*=============================================*/
-
-/*header and nav-bar special borders
+/*header and nav-bar special borders, fixed nav bar
 =============================================*/
+.nav-bar {
+  top: 0px;
+  position: fixed;
+  height: 50px;
+  width: 84.9%;
+  border: 2px dashed blue;
+  margin: 0;
+}
 .header {
   height: 100px;
   text-align: left;
   border: 2px dashed #FF0000;
-  margin: 0px 0px;
 }
-.nav-bar {
-  height: 50px;
-  border: 2px dashed blue;
-  margin: 0;
-}
-/*=============================================*/
-
-/*table of contents for the projects floated to the left of the slideshow*/
+/*table of contents for the projects floated to the left of the slideshow
+=============================================*/
 .table-of-contents{
   float: left;
+  text-align: center;
   width: 17.5%;
   min-height: 300px;
+  font-size: 35px;
+}
+.table-of-contents li{
+  margin-left: 40px;
+  text-align: left;
+  list-style: lower-roman;
+  font-size: 25px;
 }
 .slideshow {
   float: right;
   width: 80%;
   min-height: 300px;
 }
-/* Clear footer and projects from floats*/
+/* Clear footer and projects from floats slideshow
+=============================================*/
 .projects footer{
   clear: both;
 }
