--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,16 @@ html {
   font-weight: bold;
   min-height: 2000px;
 }
+
+/*All imgs will resize in browser
+=============================================*/
+
+img{
+  width: 100%;
+  height: auto;
+   width: auto\9; /* ie8 */
+}
+
 /*Adds an rgba background with opacity to every div element on the page
 =============================================*/
 .divs {
@@ -45,13 +55,34 @@ html {
   list-style: lower-roman;
   font-size: 25px;
 }
-.slideshow-article {
+#slideshow-article {
   float: right;
   width: 80%;
   min-height: 300px;
 }
+
 /* Clear footer and projects from floats slideshow
 =============================================*/
 .projects footer{
   clear: both;
+}
+
+/*Creating Slideshow and setting locations
+Later, this will be put into @media for larger screens
+=============================================*/
+.slideshow-div{
+  margin: 0px 5%;
+  overflow: hidden;
+  width: 1214.99px;
+}
+#slideshow-article .slideshow{
+  display: block;
+  width: 6075px;
+  margin: 10px 0px;
+  padding: 0px;
+}
+#slideshow-article .my-slides{
+  float: left;
+  list-style-type: none;
+  max-width: 100%;
 }
