--- a/css/modules.css
+++ b/css/modules.css
@@ -1,68 +1,85 @@
-/*Adds an rgba background with opacity to every div element on the page
-=============================================*/
-.divs {
-  border: solid black;
-  /*margin: 30px 0px;*/
-  background-color: rgba(200, 200, 200, 0.70);
-}
+@media (min-width:320px){
+  /*Adds an rgba background with opacity to every div element on the page
+  =============================================*/
+  .divs {
+    border: solid black;
+    /*margin: 30px 0px;*/
+    background-color: rgba(200, 200, 200, 0.70);
+  }
 
-/*header and nav-bar special borders, fixed nav bar
-=============================================*/
-.nav-bar {
-  display: block;
-  top: 0px;
-  position: fixed;
-  min-width: 85%;
-  height: 5%;
-  border: 2px dashed blue;
-  margin-top: 0px;
-  margin-bottom: 1px;
-  background-color: rgba(200, 200, 200, 0.70);
-}
-body .header {
-  display: block;
-  position: absolute;
-  min-width: 85%;
-  height: 7.5%;
-  margin-top: 5%;
-  margin-bottom: 100px;
-  padding: 0;
-  text-align: left;
-  border: 2px dashed #FF0000;
-  background-color: rgba(200, 200, 200, 0.70);
-}
-/*table of contents for the projects floated to the left of the slideshow
-=============================================*/
-.table-of-contents{
-  float: left;
-  text-align: center;
-  width: 100%;
-  min-height: 100px;
-  font-size: 35px;
-  margin-top: 15vh;
-}
-.table-of-contents li{
-  margin-left: 40px;
-  text-align: left;
-  list-style: lower-roman;
-  font-size: 25px;
-}
-#slideshow-article {
-  float: left;
-  width: 100%;
-  min-height: 300px;
-}
+  /*header and nav-bar special borders, fixed nav bar
+  =============================================*/
+  .nav-bar {
+    display: block;
+    top: 0px;
+    position: fixed;
+    min-width: 85%;
+    height: 5%;
+    border: 2px dashed blue;
+    margin-top: 0px;
+    margin-bottom: 1px;
+    background-color: rgba(200, 200, 200, 0.70);
+  }
+  body .header {
+    display: block;
+    position: absolute;
+    min-width: 85%;
+    height: 7.5%;
+    margin-top: 5%;
+    margin-bottom: 100px;
+    padding: 0;
+    text-align: left;
+    border: 2px dashed #FF0000;
+    background-color: rgba(200, 200, 200, 0.70);
+  }
+  /*table of contents for the projects floated to the left of the slideshow
+  =============================================*/
+  .table-of-contents{
+    float: left;
+    text-align: center;
+    width: 100%;
+    min-height: 100px;
+    font-size: 35px;
+    margin-top: 15vh;
+  }
+  .table-of-contents li{
+    margin-left: 40px;
+    text-align: left;
+    list-style: lower-roman;
+    font-size: 25px;
+  }
+  #slideshow-article {
+    float: left;
+    width: 100%;
+    min-height: 300px;
+  }
 
-/* Clear footer and projects from floats slideshow
-=============================================*/
-.projects footer{
-  clear: both;
-}
+  /* Clear footer and projects from floats slideshow
+  =============================================*/
+  .projects footer{
+    clear: both;
+  }
 
-/*Creating Slideshow and setting locations
-Later, this will be put into @media for larger screens
-=============================================*/
-.slideshow-div{
+  /*Creating Slideshow and setting locations
+  Later, this will be put into @media for larger screens
+  =============================================*/
+  /*.slideshow-div{
+    margin: 0px 5%;
+    width: 100%;
+    overflow: hidden;
+  }
+  #slideshow-article .slideshow{
+    width: 500%;
+    margin: 10px 0px;
+    padding: 0px;
+  }
+  #slideshow-article .my-slides{
+    float: left;
+    display: inline-block;
+    list-style-type: none;
+  }*/
+
+  .slideshow-div{
   margin: 0px 5%;
   width: 100%;
   overflow: hidden;
@@ -80,11 +97,14 @@ Later, this will be put into @media for larger screens
   /*max-width: 100%;
   min-height: 150px;
   max-height: 300px;*/
+
 }
+
+
 
 /*Desktop Compatibility
 =========================================================================================*/
-@media screen and (min-width: 740px) {
+@media screen and (min-width: 1025px) {
   /*Adds an rgba background with opacity to every div element on the page
   =============================================*/
   .divs {
@@ -110,6 +130,7 @@ Later, this will be put into @media for larger screens
     position: absolute;
     min-width: 85%;
     height: 7.5%;
+    margin-top: 3vh;
     margin-bottom: 100px;
     padding: 0;
     text-align: left;
@@ -152,21 +173,18 @@ Later, this will be put into @media for larger screens
   =============================================*/
   .slideshow-div{
     margin: 0px 5%;
-    width: 100%;
+    width: 90%;
     overflow: hidden;
   }
   #slideshow-article .slideshow{
-    /*display: block;*/
-    width: 90%;
+    width: 500vw;
     margin: 10px 0px;
     padding: 0px;
   }
   #slideshow-article .my-slides{
+    float: left;
+    display: inline-block;
     list-style-type: none;
-    display: inline;
-    /*max-width: 100%;
-    min-height: 150px;
-    max-height: 300px;*/
   }
 
 }
