--- a/css/modules.css
+++ b/css/modules.css
@@ -13,8 +13,8 @@
   display: block;
   top: 0px;
   position: fixed;
-  min-width: 85%;
-  height: 5%;
+  min-width: 85vw;
+  height: 5vh;
   border: 2px dashed blue;
   margin-top: 0px;
   margin-bottom: 1px;
@@ -24,9 +24,9 @@
 body .header {
   display: block;
   position: absolute;
-  min-width: 85%;
-  height: 7.5%;
-  margin-top: 3.25vh;
+  min-width: 85vw;
+  height: 7.5vh;
+  margin-top: 5.2vh;
   margin-bottom: 100px;
   padding: 0;
   text-align: left;
@@ -37,20 +37,20 @@ body .header {
 =============================================*/
 .table-of-contents{
   float: left;
-  text-align: center;
-  width: 100%;
+  text-align: left;
+  min-width: 17.5vw;
   min-height: 100px;
-  font-size: 35px;
+  font-size: 0.85em;
 }
 .table-of-contents li{
-  margin-left: 40px;
+  margin-left: 1.5em;
   text-align: left;
   list-style: lower-roman;
-  font-size: 25px;
+  font-size: 0.85em;
 }
 #slideshow-article {
   float: left;
-  width: 100%;
+  width: 85vw;
   margin-top: 12.5vh;
 }
 
@@ -76,40 +76,50 @@ body .header {
     display: none;
   }
   .nav-burger{
-    font-size: 65px;
-    color: #131313;
+    font-size: 1em;
+    color: rgba(013,013,013, .85);
     float: right;
   }
   body .header {
     display: block;
     position: absolute;
-    min-width: 85%;
-    height: 7.5%;
-    margin-top: 3.25vh;
-    margin-bottom: 100px;
-    padding: 0;
+    min-width: 85vw;
+    height: 5vh;
+    margin-top: 5.2vh;
+    /*margin-bottom: 100px;*/
+    padding-left: 0;
+    padding-right: 0;
     text-align: left;
-    font-size: 65px;
+    font-size: 1.7em;
     border: 2px dashed #FF0000;
     background-color: rgba(200, 200, 200, 0.70);
   }
   /*table of contents for the projects floated to the left of the slideshow
   =============================================*/
+    .table-of-contents li{
+      margin-left: 1.15em;
+      text-align: left;
+      list-style: lower-roman;
+      font-size: 0.6em;
+    }
   .table-of-contents{
     display: block;
     text-align: center;
-    max-width: 22.5%;
-    font-size: 35px;
+    min-width: 17.5vw;
+    max-width: 17.5vw;
+    font-size: 0.75em;
+    /*overflow: hidden;*/
   }
-  .table-of-contents li{
-    margin-left: 40px;
-    text-align: left;
-    list-style: lower-roman;
-    font-size: 25px;
+  .main-intro{
+    float: left;
+    margin-left: .5vw;
+    margin-right: 0px;
+    min-width: 65vw;
+    max-width: 65vw;
   }
   #slideshow-article {
     display: block;
-    width: 99.99%;
+    width: 85vw;
     margin-top: 12.5vh;
   }
   #slideshow-article img{
@@ -138,8 +148,8 @@ body .header {
     display: block;
     top: 0px;
     position: fixed;
-    min-width: 85%;
-    height: 5%;
+    min-width: 85vw;
+    height: 5vh;
     border: 2px dashed blue;
     margin-top: 0px;
     margin-bottom: 1px;
@@ -151,9 +161,9 @@ body .header {
   body .header {
     display: block;
     position: absolute;
-    min-width: 85%;
-    height: 7.5%;
-    margin-top: 3.25vh;
+    min-width: 85vw;
+    height: 7.5vh;
+    margin-top: 5.2vh;
     margin-bottom: 100px;
     padding: 0;
     text-align: left;
@@ -165,23 +175,26 @@ body .header {
   .table-of-contents{
     display: block;
     text-align: center;
-    max-width: 22.5%;
-    font-size: 35px;
+    min-width: 17.5vw;
+    max-width: 17.5vw;
+    font-size: 0.85em;
   }
   .main-intro{
     float: left;
-    max-width: 70%;
+    margin-left: 1.5vw;
+    margin-right: 0;
+    min-width: 65.25vw;
+    max-width: 65.25vw;
   }
-
   .table-of-contents li{
-    margin-left: 40px;
+    margin-left: 1.5em;
     text-align: left;
     list-style: lower-roman;
-    font-size: 25px;
+    font-size: 0.85em;
   }
   #slideshow-article {
     display: block;
-    width: 99.99%;
+    width: 85vw;
     margin-top: 12.5vh;
   }
   #slideshow-article img{
