formatting on the main works, working on getting the home to be the default config on page load

--- a/css/modules.css
+++ b/css/modules.css
@@ -195,6 +195,11 @@ body .header {
     min-width: 65.25vw;
     max-width: 65.25vw;
   }
+  .main-intro-big{
+    float: left;
+    margin-top: 0;
+    width: 85vw;
+  }
   .table-of-contents li{
     margin-left: 1.5em;
     text-align: left;
