--- a/css/base.css
+++ b/css/base.css
@@ -6,11 +6,12 @@ html {
   margin-left: 7.5vw;
   margin-right: 7.5vw;
   min-width: 85.25vw;
-  font-family: 'Dosis', sans-serif;
+  /*font-family: 'Dosis', sans-serif;*/
+  font-family: 'Signika', sans-serif;
   font-weight: bold;
   min-height: 200vw;
 }
-  
+
 /*All imgs will resize in browser
 =============================================*/
 
@@ -28,3 +29,36 @@ a{
   text-transform: lowercase;
   text-decoration-line: none;
 }
+/*Adds an rgba background with opacity to every div element on the page
+=============================================*/
+.divs {
+  border: solid black;
+  background-color: rgba(200, 200, 200, 0.70);
+}
+/*Font styling
+=============================================*/
+html {font-size: 0.875em;}
+
+body {
+  background-color: white;
+  font-family: 'Signika', sans-serif;;
+  font-weight: 400;
+  line-height: 1.45;
+  color: #333;
+}
+p {
+  margin-bottom: 1.3em;
+}
+h1, h2, h3, h4 {
+  /*margin: 1.414em 0 0.5em;*/
+  font-weight: inherit;
+  line-height: 1.2;
+}
+h1 {
+  margin-top: 0;
+  font-size: 6.854em;
+}
+h2 {font-size: 4.236em;}
+h3 {font-size: 2.618em;}
+h4 {font-size: 1.618em;}
+small, .font_small {font-size: 0.618em;}
