mobile nav-burger

--- a/css/modules.css
+++ b/css/modules.css
@@ -5,7 +5,7 @@
   top: 0px;
   position: fixed;
   min-width: 85vw;
-  height: 5vh;
+  height: 4.5vh;
   border: 2px dashed blue;
   margin-top: 0px;
   margin-bottom: 1px;
@@ -17,7 +17,7 @@ body .header {
   position: absolute;
   min-width: 85vw;
   height: 7.5vh;
-  margin-top: 5.2vh;
+  margin-top: 4.8vh;
   padding: 0;
   text-align: left;
   border: 2px dashed #FF0000;
@@ -50,9 +50,41 @@ body .header {
 .projects footer{
   clear: both;
 }
-
-/*Mobile Compatible Menu
-=============================================*/
 @media only screen and (max-width: 740px) {
-
+  /*header and nav-bar special borders, fixed nav bar
+  =============================================*/
+  .nav-bar {
+    overflow: hidden;
+  }
+  .nav-burger{
+    cursor: pointer;
+    margin: .45em;
+    float: right;
+    font-size: 1em;
+    color: rgba(800,800,900, .85);
+    z-index: 5;
+  }
+  .slide-left{
+    cursor: pointer;
+    font-size: 1em;
+    color: rgba(800,800,900, 0.85);
+    transition: all 1s;
+    margin-left: 100%;
+  }
+  .slide-left.show{
+    margin-left: 0%;
+  }
+  body .header {
+    display: block;
+    position: absolute;
+    min-width: 85vw;
+    height: 5vh;
+    margin-top: 5.2vh;
+    padding-left: 0;
+    padding-right: 0;
+    text-align: left;
+    font-size: 1.7em;
+    border: 2px dashed #FF0000;
+    background-color: rgba(200, 200, 200, 0.70);
+  }
 }
