--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -8,6 +8,21 @@
     margin: 30px 0px;
     background-color: rgba(200, 200, 200, 0.70);
   }
+  body .header {
+    display: block;
+    position: absolute;
+    min-width: 85vw;
+    height: 7.5vh;
+    margin-top: 5vh;
+    padding: 0;
+    font-family: 'Fredericka the Great', cursive;
+    text-shadow: 1px 1px #000;
+    font-size: 2em;
+    line-height: 1.15;
+    text-align: center;
+    background-color: rgba(200, 200, 200, 0.70);
+  }
+
   /*table of contents for the projects floated to the left of the slideshow
   =============================================*/
   .table-of-contents{
@@ -76,9 +91,9 @@
     position: fixed;
     min-width: 85vw;
     height: 5vh;
-    /*border: 2px dashed blue;*/
     margin-top: 0px;
     background-color: rgba(013, 013, 013, 0.85);
+    z-index: 2;
   }
   .nav-bar a{
     font-size: 2em;
@@ -95,10 +110,13 @@
     position: absolute;
     min-width: 85vw;
     height: 7.5vh;
-    margin-top: 5.2vh;
+    margin-top: 5vh;
     padding: 0;
-    text-align: left;
-    /*border: 2px dashed #FF0000;*/
+    font-family: 'Fredericka the Great', cursive;
+    text-shadow: 1px 1px #000;
+    font-size: 3.5em;
+    line-height: 1.15;
+    text-align: center;
     background-color: rgba(200, 200, 200, 0.70);
   }
   /*table of contents for the projects floated to the left of the slideshow
